// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div
    class="inputAvatar"
  >
    <div
      class="preview"
    >
      <div
        class="avatar large isDark"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _2SoAwA0A8G1BGDNjtkt-lt"
          data-testid="person"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="_2GsLyQLHv8yNULHeXGdver _29W47x5R7CHDPdmq99tUBc"
            d="M512 469.333c-94.255 0-170.665-76.41-170.665-170.667s76.41-170.667 170.665-170.667c94.259 0 170.667 76.41 170.667 170.667s-76.407 170.667-170.667 170.667zM512 384c47.13 0 85.333-38.205 85.333-85.333s-38.204-85.333-85.333-85.333c-47.125 0-85.333 38.205-85.333 85.333s38.208 85.333 85.333 85.333z"
          />
          <path
            class="_2GsLyQLHv8yNULHeXGdver _29W47x5R7CHDPdmq99tUBc"
            d="M225.679 810.667h572.644c-36.698-123.392-151.1-213.333-286.323-213.333s-249.623 89.941-286.321 213.333zM810.795 810.654l-0.115 0.013zM213.322 810.667l-0.114-0.013zM129.919 811.332c38.557-171.341 199.096-299.332 382.081-299.332 182.989 0 343.629 127.991 382.187 299.332 1.263 5.615 1.788 11.123 1.647 16.461-0.068 2.722-0.311 5.402-0.717 8.026-5.303 34.441-38.46 60.181-76.902 60.181h-612.327c-39.024 0-72.603-26.526-77.123-61.756-0.939-7.313-0.624-15.006 1.155-22.912z"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropZoneBase"
      tabindex="-1"
    >
      <input
        accept="image/*"
        autocomplete="off"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <button
        class="button small work secondary fullWidth"
        type="button"
      >
        <span
          class="base extraBold smaller uppercase"
        >
          Upload Image
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders with a provided image 1`] = `
<div>
  <div
    class="inputAvatar"
  >
    <div
      class="preview"
    >
      <div
        class="avatar large isDark"
        role="img"
        style="background-image: url(https://api.adorable.io/avatars/150/jobbler);"
      />
    </div>
    <div
      class="dropZoneBase"
      tabindex="-1"
    >
      <input
        accept="image/*"
        autocomplete="off"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <button
        class="button small work secondary fullWidth"
        type="button"
      >
        <span
          class="base extraBold smaller uppercase"
        >
          Change Image
        </span>
      </button>
    </div>
    <button
      class="button small destructive secondary"
      type="button"
    >
      <span
        class="base extraBold smaller uppercase"
      >
        Remove
      </span>
    </button>
  </div>
</div>
`;
